<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background=""
            android:paddingHorizontal="6dp"
            android:paddingVertical="4dp">

            <!--    Modelo do Carro-->
            <TextView
                android:id="@+id/modelo_carro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_default"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/marca_carro"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Corola Xei" />

            <!--    Marca do Carro-->
            <TextView
                android:id="@+id/marca_carro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_default"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Toyota" />

            <!--    Cor do carro View-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/view_cor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/modelo_carro">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cor_tag" />

                <TextView
                    android:id="@+id/cor_carro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    tools:text="Azul" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--    Portas do carro View-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/view_portas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/combustivel_carro"
                app:layout_constraintStart_toEndOf="@id/view_cor"
                app:layout_constraintTop_toTopOf="@+id/view_cor">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/portas_tag" />

                <TextView
                    android:id="@+id/portas_carro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    tools:text="4" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--    Tipo de Combustível-->
            <TextView
                android:id="@+id/combustivel_carro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/view_cor"
                tools:text="Flex" />

            <!--    Ano do Carro View-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/valor_carro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/valor_carro">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ano_tag" />

                <TextView
                    android:id="@+id/ano_carro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    tools:text="2016"/>
            </LinearLayout>

            <!--    Valor do Carro-->
            <TextView
                android:id="@+id/valor_carro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/color_default"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/combustivel_carro"
                tools:text="R$ 70.000,00" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>